# GTK-info

./: .gitmodules  README.md  SHOWCASE.MD
Nim/glib/: app_info.nim
Nim/gtk4/: builder_list_view.nim  list_view_custom_objects.nim  listbox_controls.nim  media_controls_mp3_player.nim  simple_list_view_todo.nim  sometest  sometest.nim  source_view5.nim  stack.nim
Nim/gtk4/adwaita/: README.MD  adwaita  carousel  tabs.nim
Nim/gtk4/thread/: thread1.nim
Vala/Containers/Box/Glade/: meson.build
Vala/Containers/Grid/Code/: meson.build  v.vala
Vala/Containers/Grid/Glade/: README.md
Vala/Controls/Glade/: calc.vala
Vala/Display/InfoBar/Glade/data/: calc.ui
Vala/gtk3/Containers/Box/Code/: v.vala
Vala/gtk3/Containers/Grid/Glade/data/: calc.ui  calc.ui~
Vala/gtk3/Controls/Code/: v.vala
Vala/gtk3/Display/InfoBar/Glade/: calc.vala
Vala/gtk3/Display/InfoBar/Glade/data/: calc.ui~  resources.xml
